--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.3'
     implementation 'net.sourceforge.tess4j:tess4j:3.2.1'
+    implementation 'com.h2database:h2:2.2.220'
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 
 }
